--- a/Footer.css
+++ b/Footer.css
@@ -13,6 +13,8 @@ body {
 }
 
 #footer {
+    position: relative;
+    z-index: 9;
     overflow: hidden;
     width: 100%;
     min-height: 40px;
@@ -29,15 +31,16 @@ body {
     text-decoration: none;
 }
 
-
-#footer>.mailBox {
-    overflow: hidden;
+#mailBox {
+    position: fixed;
+    z-index: 8;
+    bottom: -220px;
     width: 100%;
-    height: 0;
+    height: 220px;
     background-color: #f0edec;
 }
 
-#footer>.mailBox>h4 {
+#mailBox>h4 {
     width: 194px;
     height: 33px;
     text-indent: -9999px;
@@ -45,7 +48,7 @@ body {
     margin: 55px 0 35px 10.65%;
 }
 
-#footer>.mailBox table {
+#mailBox table {
     width: 78.8%;
     height: 45px;
     border-bottom: 1px solid #67615F;
@@ -53,30 +56,20 @@ body {
     margin: 0 auto;
 }
 
-#footer>.mailBox table tr>th {
-    width: 205px;
-}
-
-#footer>.mailBox table tr>th>span {
-    display: block;
-    width: 201px;
-    height: 29px;
-    text-indent: -9999px;
-    background: url(http://photo.lamo3.com.tw/eshop/common/subscribe-placeholder.png) no-repeat;
-}
-
-#footer>.mailBox table tr>td.subscribe {
+#mailBox table tr>td.subscribe {
     width:40px;
 }
 
-#footer>.mailBox table tr>td>input[type="text"] {
+#mailBox table tr>td>input[type="text"] {
     width: 98%;
+    color: #4F4D4E;
     line-height: 30px;
+    font: 400 35px/1 "微軟正黑體";
     background-color: transparent;
     border: 0 none;
 }
 
-#footer>.mailBox table tr>td.subscribe>input {
+#mailBox table tr>td.subscribe>input {
     width: 39px;
     height: 29px;
     text-indent: -9999px;
