--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
     padding: 0;
     margin: 0;
@@ -8,7 +9,7 @@ body {
     max-width: 1920px;
     min-width:1024px;
     padding-top: 1032px;
-    background: url(index.jpg) 50% 0 no-repeat;
+    background: url(../images/demo/index.jpg) 50% 0 no-repeat;
     margin: 0 auto;
 }
 
