--- a/header.css
+++ b/header.css
@@ -36,6 +36,8 @@ body
     display: none;
 }
 
+/**********/
+
 .header
 {
     position: fixed;
@@ -45,6 +47,13 @@ body
 
     .header a
     {
+        text-decoration: none;
+        -moz-box-sizing: content-box;
+        -webkit-box-sizing: content-box;
+        box-sizing: content-box;
+    }
+
+    .header a:hover {
         text-decoration: none;
     }
 
