--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
-* {
-  font-family: "LanTinghei tc",·L³n¥¿¶ÂÅé, "Helvetica Neue",Helvetica,sans-serif;
+ï»¿* {
+  font-family: "LanTinghei tc",å¾®è»Ÿæ­£é»‘é«”, "Helvetica Neue",Helvetica,sans-serif;
 }
 
 body
